# itwuziguanli

./: .gitignore  AGENTS.md  IT物资管理系统说明书.MD  README.md  ci-gates.test.ts  findings.md  package.json  progress.md  task_plan.md  背景1.avif  背景3.avif  背景4.avif
backend/: .dockerignore  Dockerfile  __init__.py  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 202602070001_initial_core_tables.py  202602100001_sku_stock_mode_and_quantity_stock.py  202602110001_add_rbac_ui_guard_table.py  202602110002_expand_user_and_application_snapshots.py  202602120001_add_category_approver_fields.py  202602240001_add_sku_is_visible.py  202602240002_add_sku_name.py
backend/app/: __init__.py  main.py
backend/app/clients/: __init__.py  data_service_client.py
backend/app/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  application.py  catalog.py  inbound.py  mixins.py  notification.py  organization.py  portal.py  rbac.py  sku_stock.py
backend/scripts/: migrate_mysql_to_pg.py
backend/tests/: test_step08_auth_rbac.py  test_step10_m01_portal.py  test_step11_m02_application.py  test_step12_m03_approval.py  test_step13_m04_m05.py  test_step14_m06_inbound_inventory.py  test_step15_m09_asset_lifecycle.py  test_step16_m07_reports.py  test_step17_m08_admin.py
data-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
data-service/alembic/: env.py
data-service/app/: __init__.py  main.py
(+132 files in other folders)
