[project]
name = "it-asset-lifecycle-backend"
version = "0.1.0"
description = "Backend scaffold for IT Asset Lifecycle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.37",
  "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
