[project]
name = "it-asset-data-service"
version = "1.0.0"
description = "Data Access Microservice for IT Asset Lifecycle"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.37",
  "alembic>=1.14.0",
  "pydantic>=2.0.0",
  # 数据库驱动
  "pymysql>=1.1.0",
  "psycopg2-binary>=2.9.9",
  # HTTP 客户端
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
